Bug 454436 - Elided Places Panel items don't have tooltips showing their full text
Summary: Elided Places Panel items don't have tooltips showing their full text
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Places (other bugs)
Version First Reported In: git master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords: usability
: 463831 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-05-26 13:31 UTC by John
Modified: 2024-07-27 09:24 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John 2022-05-26 13:31:13 UTC
SUMMARY
***
Tooltips are not appearing in Dolphin
***


STEPS TO REPRODUCE
1. Open Dolphin
2. Hover over the toolbar (the one below title bar) buttons and see how the tooltips are appearing with explanations of what those buttons do
3. Make the left and right panel width narrow enough by dragging the vertical separator to the left until those locations are truncated (showing ... at then end of the names) and the right edge until the content (folder and files) names are trucated

ADDITIONAL STEPS
1. Open another program, for example Kate, so that the new program is focused, but Dolphin still visible
2. Open Dolphin's configuration window

OBSERVED RESULT
The title bar and toolbar tooltips seem  to show up as expected
In the left and right panel, there are no tooltips, even if the names are truncated and you need to see their full names
With the additional step 1 of having Kate open too and focused, hovering on Dolphin toolbar icons shows them highlighted with the blue edges, but the tooltips don't appear anymore
With the additional step 2 of viewing Dolphin's configuration window, many options don't have tooltips with explanations.
For example in General -> Behavior Show selection marker"

EXPECTED RESULT
Show tooltitps everywhere, especially when folder and file names are truncated, even if the "Show tooltips" option is not enabled in the configuration window
With another program opened and focused, like Kate, I still want to see the tooltips while I hover over stuff in Dolphin
For example in this case I was writing in Kate a list of bugs to report later and at this step I had just to hover on Dolphin without having to click anything.
And the same with working with side by side windows, I want to see the tooltips on the non-fucused window too.
Currently in side by side view it's working on the non-focused windows only on title bar buttons and content if the "Show tooltips" is enabled, but not on the toolbar or for the items that are truncated.

Show tooltips in Dolphin's configuration window, at least for some option that are not so easy to understand like ""Show selection marker"


SOFTWARE/OS VERSIONS
Linux/KDE Plasma:
KDE Plasma Version: 5.24.90
KDE Frameworks Version: 5.95
Qt Version: 5.15.4

ADDITIONAL INFORMATION
From: neon-testing-20220524-1822.iso + updates from Discover
Tested on Wayland
Comment 1 Bug Janitor Service 2022-07-08 17:28:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/903
Comment 2 Kai Uwe Broulik 2024-07-24 15:47:55 UTC
*** Bug 463831 has been marked as a duplicate of this bug. ***
Comment 3 Kai Uwe Broulik 2024-07-24 17:52:42 UTC
Git commit d553b5f2d585fbccc900cae2eea64d77ea54e407 by Kai Uwe Broulik.
Committed on 24/07/2024 at 17:38.
Pushed by broulik into branch 'master'.

KFilePlacesView: Show label in tooltip if it is elided

Suppress tooltip on Wayland before Qt 6.8, however.
Qt Wayland cannot reposition popups before that, causing in the
tooltips being stuck in place, which is distracting.

M  +42   -4    src/filewidgets/kfileplacesview.cpp
M  +5    -0    src/filewidgets/kfileplacesview_p.h

https://invent.kde.org/frameworks/kio/-/commit/d553b5f2d585fbccc900cae2eea64d77ea54e407