KFilePlacesView: Show label in tooltip if it is elided

BUG: 454436