src/filewidgets/kfileplacesview.cpp
@@ -102,6 +102,7 @@ void KFilePlacesViewDelegate::paint(QPainter *painter, const QStyleOptionViewIte
     painter->save();
 
     QStyleOptionViewItem opt = option;
+    const QPersistentModelIndex persistentIndex(index);
 
     const KFilePlacesModel *placesModel = static_cast<const KFilePlacesModel *>(index.model());
 
@@ -206,7 +207,6 @@ void KFilePlacesViewDelegate::paint(QPainter *painter, const QStyleOptionViewIte
     }
 
     if (placesModel->data(index, KFilePlacesModel::CapacityBarRecommendedRole).toBool()) {
-        QPersistentModelIndex persistentIndex(index);
         const auto info = m_freeSpaceInfo.value(persistentIndex);
 
         checkFreeSpace(index); // async
@@ -259,9 +259,18 @@ void KFilePlacesViewDelegate::paint(QPainter *painter, const QStyleOptionViewIte
         }
     }
 
-    painter->drawText(rectText,
-                      Qt::AlignLeft | Qt::AlignVCenter,
-                      opt.fontMetrics.elidedText(index.model()->data(index).toString(), Qt::ElideRight, rectText.width()));
+    const QString text = index.model()->data(index).toString();
+    const QString elidedText = opt.fontMetrics.elidedText(text, Qt::ElideRight, rectText.width());
+
+    const bool isElided = (text != elidedText);
+
+    if (isElided) {
+        m_elidedTexts.insert(persistentIndex);
+    } else if (auto it = m_elidedTexts.find(persistentIndex); it != m_elidedTexts.end()) {
+        m_elidedTexts.erase(it);
+    }
+
+    painter->drawText(rectText, Qt::AlignLeft | Qt::AlignVCenter, elidedText);
 
     painter->restore();
 }
@@ -290,9 +299,29 @@ bool KFilePlacesViewDelegate::helpEvent(QHelpEvent *event, QAbstractItemView *vi
             }
         } else if (pointIsHeaderArea(event->pos())) {
             // Make sure the tooltip doesn't linger when moving the mouse to the header area
+            // TODO show section name in a tooltip, too, if it is elided.
             QToolTip::hideText();
             event->setAccepted(true);
             return true;
+        } else {
+            const bool isElided = m_elidedTexts.find(QPersistentModelIndex(index)) != m_elidedTexts.end();
+
+            const QString displayText = index.data(Qt::DisplayRole).toString();
+            QString toolTipText = index.data(Qt::ToolTipRole).toString();
+
+            if (isElided) {
+                if (!toolTipText.isEmpty()) {
+                    toolTipText = i18nc("@info:tooltip full display text since it is elided: original tooltip", "%1: %2", displayText, toolTipText);
+                } else {
+                    toolTipText = displayText;
+                }
+            }
+
+            if (!toolTipText.isEmpty()) {
+                QToolTip::showText(event->globalPos(), toolTipText, m_view, m_view->visualRect(index));
+                event->setAccepted(true);
+                return true;
+            }
         }
     }
     return QAbstractItemDelegate::helpEvent(event, view, option, index);
